<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kcptun_android</string>
    <string name="info">提示</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="stop_kcp_tun_normal">Kcptun正常结束！可以再次运行！\n</string>
    <string name="stop_kcp_tun_exception">Kcptun异常结束！可以再次运行！\n</string>
    <string name="setting">设置</string>
    <string name="local_server_port">本地端口号</string>
    <string name="remote_server_ip">远程服务器IP</string>
    <string name="remote_server_key">远程服务器密码</string>
    <string name="remote_server_port">远程服务器端口</string>
    <string name="server_mode">服务器运行模式</string>
    <string name="no_setting_info">请先进行服务器配置</string>
    <string name="arch_info">运行平台架构:</string>
    <string name="detect_cpu_info_error">不支持的CPU架构或出现异常</string>
</resources>