<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.shutup.kcptun_android.SettingActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/remote_server_ip_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText android:id="@+id/remote_server_ip"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/remote_server_ip"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/remote_server_port_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText android:id="@+id/remote_server_port"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/remote_server_port"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/local_server_port_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText android:id="@+id/local_server_port"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/local_server_port"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/remote_server_key_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText android:id="@+id/remote_server_key"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/remote_server_key"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/server_mode_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText android:id="@+id/server_mode"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/server_mode"
            >
        </android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>



</LinearLayout>
